OpenApi Documentation with Swagger.
